--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,11 @@
 // Colors
 $color-black: black;
 $color-white: white;
+$color-vaj: #E8DDCC;
 $color-gold-light: #E5C282;
+$color-mogyoro:rgb(175, 142, 101);
+$color-csoki: #634115;
+$color-red: #6E0D0D;
+
+// sizes
+$footer-height: 170px;
