--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,6 +8,6 @@
     font-family: arecibo;
     font-size: 5.5rem;
     text-align: center;
-    color: #E8DDCC;
+    color: $color-vaj;
     padding: 70px 0.5rem 0.8rem 0.5rem;
 }
