--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,10 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/keret";
 
+@import "layout/footer";
 @import "layout/header";
+@import "layout/jumbotron";
 @import "layout/main";
 @import "layout/nav";
