working on footer

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,5 +7,5 @@ $color-mogyoro:rgb(175, 142, 101);
 $color-csoki: #634115;
 $color-red: #6E0D0D;
 
-// sizes
-$footer-height: 170px;
+// Sizes
+$footer-height: 150px;
