--- a/css/style.css
+++ b/css/style.css
@@ -95,16 +95,19 @@ hr {
   max-width: 100%; }
 
 .footer {
-  height: 170px;
+  height: 150px;
   text-align: center;
   text-decoration: none;
-  padding-top: 8px; }
+  padding-top: 8px;
+  display: flex;
+  justify-content: space-between; }
 
 .footerline {
   margin: 12px;
   transition: .2s; }
   .footerline #vasuttori {
-    color: white; }
+    color: #E5C282;
+    font-size: 0.82rem; }
   .footerline #tatai {
     font-weight: 600;
     color: white; }
@@ -158,7 +161,7 @@ main {
   min-height: 100%;
   height: auto;
   /* Negative indent footer by its height */
-  margin: 0 auto -170px;
+  margin: 0 auto -150px;
   /* Pad bottom by footer height */
   padding: 0 0 150px; }
 
