--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,8 +1,9 @@
+$footer-height: 60px;
+
 .footer {
     height: $footer-height;
     text-align: center;
     text-decoration: none;
-    padding-top: 8px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -18,11 +19,13 @@
     #vasuttori {
         color: $color-gold-light;
         font-size: 0.82rem;
+        padding: 0 0.3rem;
     }
 
     #tatai {
         font-weight: 600;
         color: $color-white;
+        padding: 0 0.3rem;
     }
 
     p {
@@ -40,7 +43,7 @@
     width: 32px;
     height: 32px;
     text-align: center;
-    background: rgba($color-white, 0.8);
+    background: $color-gold-light;
     color: $color-black;
     border-radius: 50%;
     transition: .2s;
